# Flask-Moment

./: .gitignore  .travis.yml  CHANGES.md  README.md  flask_moment.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: tests.yml
docs/: Makefile  advanced.rst  api.rst  conf.py  index.rst  make.bat  quickstart.rst
example/: app.py  requirements.txt
example/static/: readable-range.js
example/templates/: index.html
src/: flask_moment.py
src/flask_moment/: __init__.py
tests/: conftest.py  test_flask_moment.py
