[metadata]
name = Flask-Moment
version = 1.0.1
author = Miguel Grinberg
author_email = miguel.grinberg@gmail.com
description = Formatting of dates and times in Flask templates using moment.js.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/miguelgrinberg/flask-moment
project_urls =
    Bug Tracker = https://github.com/miguelgrinberg/flask-moment/issues
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
py_modules =
    flask_moment
python_requires = >=3.6
install_requires =
    Flask
